# fmailersdk

./: .gitignore  CLAUDE.md  Makefile  README.md  async_example.py  pyproject.toml  requirements.txt  sdk.py  tests.py
.github/workflows/: publish.yml
examples/: async_example.py  logging_example.py
src/fmailersdk/: __init__.py  exceptions.py  sdk.py
tests/: __init__.py  test_sdk.py
