[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fmailersdk"
version = "0.1.0"
description = "Python SDK for Fmailer email service API (api.fmailer.ru)"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
    {name = "Andrey Fanyagin", email = "skymanrm@gmail.com"}
]
keywords = ["email", "fmailer", "sdk", "api", "email-service"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "faker>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/skymanrm/fmailersdk"
Repository = "https://github.com/skymanrm/fmailersdk"
Issues = "https://github.com/skymanrm/fmailersdk/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
